Реализовать пагинацию и сортировку для Продуктов по инструкции преподавателя, данной на уроке.

--- a/spring-lesson-05-hibernate/src/main/resources/templates/fragments/sort_header.html
+++ b/spring-lesson-05-hibernate/src/main/resources/templates/fragments/sort_header.html
@@ -2,8 +2,8 @@
       xmlns:th="http://www.thymeleaf.org">
 
 <th scope="col" th:fragment="sort_header (header, column)">[[${header}]]
-    <a th:href="@{/user(page=${param.page}, size=${param.size},
-                           usernameFilter=${param.usernameFilter}, minAge=${param.minAge}, maxAge=${param.maxAge},
+    <a th:href="@{/item(page=${param.page}, size=${param.size},
+                           nameFilter=${param.nameFilter}, minPrice=${param.minPrice}, maxPrice=${param.maxPrice},
                            sortField=${column})}"><i class="fa fa-sort-down"></i></a>
 </th>
 
