--- a/spring-lesson-11-spring-security/src/main/resources/templates/fragments/head.html
+++ b/spring-lesson-11-spring-security/src/main/resources/templates/fragments/head.html
@@ -33,6 +33,13 @@
         </ul>
 
         <!-- TODO добавить кнопку логин -->
+        <form sec:authorize="!isAuthenticated()"
+              th:action="@{/login}" th:method="get"
+              class="form-inline my-2 my-lg-0" >
+            <button class="btn btn-outline-success my-2 my-sm-0">
+                Sign in
+            </button>
+        </form>
 
         <form sec:authorize="isAuthenticated()"
               th:action="@{/logout}" th:method="post"
