--- a/spring-lesson-11-spring-security/src/main/resources/templates/user.html
+++ b/spring-lesson-11-spring-security/src/main/resources/templates/user.html
@@ -9,7 +9,7 @@
 
 <div class="container">
     <div class="row py-2">
-        <div class="col-12">
+        <div th:if="${hasAccess}" class="col-12">
             <a class="btn btn-primary" th:href="@{/user/new}">Add User</a>
         </div>
 
